--- a/svg.ipynb
+++ b/svg.ipynb
@@ -150,9 +150,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fcecb04c-d1bf-4c0a-a9e1-69479769fa98",
+   "metadata": {},
+   "source": [
+    "<img src=\"data:image/svg+xml;utf8, <svg xmlns='http://www.w3.org/2000/svg'><line x1='0' y1='0' x2='200' y2='200' style='stroke:rgb(255,0,0);stroke-width:2'/></svg>\" />"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd530e30-a020-44fd-a49a-7160fef8d5a6",
+   "id": "11e3c66b-4717-4eb1-9e5d-fce3bdade988",
    "metadata": {},
    "outputs": [],
    "source": []
