--- a/svg.ipynb
+++ b/svg.ipynb
@@ -170,8 +170,9 @@
    "metadata": {},
    "source": [
     "# 16\n",
-    "</p>\n",
-    "<img src=\"data:image/svg+xml;base64, PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnPjxsaW5lIHgxPScwJyB5MT0nMCcgeDI9JzIwMCcgeTI9JzIwMCcgc3R5bGU9J3N0cm9rZTpyZ2IoMjU1LDAsMCk7c3Ryb2tlLXdpZHRoOjInLz48L3N2Zz4=\" />"
+    "<html><body>\n",
+    "<img src=\"data:image/svg+xml;base64, PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnPjxsaW5lIHgxPScwJyB5MT0nMCcgeDI9JzIwMCcgeTI9JzIwMCcgc3R5bGU9J3N0cm9rZTpyZ2IoMjU1LDAsMCk7c3Ryb2tlLXdpZHRoOjInLz48L3N2Zz4=\" />\n",
+    "    </body></html>"
    ]
   },
   {
